"brush size and drawpaths saving"

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,13 +8,32 @@
 
    <ud.demo.drawingapp.DrawingView
        android:id="@+id/drawing_view"
-       android:layout_width="0dp"
-       android:layout_height="0dp"
-       app:layout_constraintBottom_toBottomOf="parent"
+       android:layout_width="405dp"
+       android:layout_height="607dp"
+       android:layout_margin="5dp"
+       android:background="@drawable/background_drawing_view_layout"
+       app:layout_constraintBottom_toTopOf="@id/brush"
+       app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
-       app:layout_constraintTop_toTopOf="parent"
 
-       />
+       app:layout_constraintTop_toTopOf="parent"
+       app:layout_constraintVertical_bias="0.0" />
+
+   <ImageButton
+       android:id="@+id/brush"
+       android:layout_width="120dp"
+       android:layout_height="136dp"
+       android:layout_margin="10dp"
+       android:layout_marginBottom="20dp"
+       android:scaleType="fitXY"
+       android:src="@color/black"
+       app:layout_constraintBottom_toBottomOf="parent"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintHorizontal_bias="0.498"
+       app:layout_constraintStart_toStartOf="parent"
+
+       app:layout_constraintTop_toBottomOf="parent"
+       app:layout_constraintVertical_bias="0.771" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
